tests/machine/x/ocaml/in_operator_extended.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/in_operator_extended.ml", line 52, characters 41-42:
52 |   print_endline (__show ((List.mem "ell" s)));
                                              ^
Error: This expression has type string but an expression was expected of type
         string list


Context (around line 52):
  50 |   print_endline (__show ((List.mem_assoc "a" m)));
  51 |   print_endline (__show ((List.mem_assoc "b" m)));
  52 |   print_endline (__show ((List.mem "ell" s)));
  53 |   print_endline (__show ((List.mem "foo" s)));
  54 | 
